kubernetes/cmsweb-nginx/acdcserver.yaml
kind: Service
apiVersion: v1
metadata:
  name: acdcserver
spec:
  selector:
    app: acdcserver
  ports:
    - port: 5984
      targetPort: 5984
      name: acdcserver
    - port: 15984
      targetPort: 15984
      name: acdcserver-mon
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: acdcserver
  name: acdcserver
spec:
  selector:
    matchLabels:
      app: acdcserver
  replicas: 1
  template:
    metadata:
      labels:
        app: acdcserver
    spec:
#       hostNetwork: true
#       dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: veknet/acdcserver
        name: acdcserver
        tty: true
        stdin: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 20 && /data/monitor.sh"]
        ports:
        - containerPort: 5984
          protocol: TCP
          name: acdcserver
        - containerPort: 15984
          protocol: TCP
          name: acdcserver-mon
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: acdcserver-secrets
          # https://github.com/kubernetes/kubernetes/issues/34982
          defaultMode: 256
          items:
            - key: "robotcert.pem"
              path: "robotcert.pem"
              mode: 0640
            - key: "robotkey.pem"
              path: "robotkey.pem"
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
