kubernetes/cmsweb-nginx/alertscollector.yaml
kind: Service
apiVersion: v1
metadata:
  name: alertscollector
spec:
  selector:
    app: alertscollector
  ports:
    - port: 5984
      targetPort: 5984
      name: alertscollector
    - port: 15984
      targetPort: 15984
      name: alertscol-mon
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: alertscollector
  name: alertscollector
spec:
  selector:
    matchLabels:
      app: alertscollector
  replicas: 1
  template:
    metadata:
      labels:
        app: alertscollector
    spec:
#       hostNetwork: true
#       dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/alertscollector:1.0.0
        name: alertscollector
        ports:
        - containerPort: 5984
          protocol: TCP
          name: alertscollector
        - containerPort: 15984
          protocol: TCP
          name: alertscol-mon
        volumeMounts:
        - name: proxy-secrets
          mountPath: /etc/proxy
          readOnly: true
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: proxy-secrets
        secret:
          secretName: proxy-secrets
      - name: secrets
        secret:
          secretName: alertscollector-secrets
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
