kubernetes/cmsweb-nginx/couchdb.yaml
kind: Service
apiVersion: v1
metadata:
  name: couchdb
spec:
  selector:
    app: couchdb
  ports:
    - port: 5984
      targetPort: 5984
      name: couchdb
    - port: 9984
      targetPort: 9984
      name: couchdb-mon
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: couchdb
  name: couchdb
spec:
  selector:
    matchLabels:
      app: couchdb
  replicas: 1
  template:
    metadata:
      labels:
        app: couchdb
    spec:
      # use hostNetwork to allow communication between reqmgr/reqmon/workqueue and couch
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/couchdb
        name: couchdb
        tty: true
        stdin: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 20 && /data/monitor.sh"]
        ports:
        - containerPort: 5984
          protocol: TCP
          name: couchdb
        - containerPort: 9984
          protocol: TCP
          name: couchdb-mon
        volumeMounts:
        - name: secrets
          mountPath: "/etc/secrets"
          defaultMode: 256
#           readOnly: true
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: couchdb-secrets
          # https://github.com/kubernetes/kubernetes/issues/34982
#           defaultMode: 256
#           items:
#             - key: "robotcert.pem"
#               path: "robotcert.pem"
#               mode: 0640
#             - key: "robotkey.pem"
#               path: "robotkey.pem"
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
