kubernetes/cmsweb-nginx/crabcache.yaml
kind: Service
apiVersion: v1
metadata:
  name: crabcache
spec:
  selector:
    app: crabcache
  ports:
    - port: 8271
      targetPort: 8271
#       nodePort: 30271
#   type: NodePort
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: crabcache
  name: crabcache
spec:
  selector:
    matchLabels:
      app: crabcache
  replicas: 1
  template:
    metadata:
      labels:
        app: crabcache
    spec:
      containers:
      - image: cmssw/crabcache
        name: crabcache
        ports:
        - containerPort: 8271
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: crabcache-secrets
          # https://github.com/kubernetes/kubernetes/issues/34982
          defaultMode: 256
          items:
            - key: "robotcert.pem"
              path: "robotcert.pem"
              mode: 0640
            - key: "robotkey.pem"
              path: "robotkey.pem"
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
