kubernetes/cmsweb-nginx/crabserver.yaml
kind: Service
apiVersion: v1
metadata:
  name: crabserver
spec:
  selector:
    app: crabserver
  ports:
    - port: 8270
      targetPort: 8270
      name: crabserver
    - port: 18270
      targetPort: 18270
      name: crabserver-mon
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: crabserver
  name: crabserver
spec:
  selector:
    matchLabels:
      app: crabserver
  replicas: 1
  template:
    metadata:
      labels:
        app: crabserver
    spec:
      containers:
      - image: cmssw/crabserver:1.0.1
        name: crabserver
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "2Gi"
            cpu: "800m"
        ports:
        - containerPort: 8270
          protocol: TCP
          name: crabserver
        - containerPort: 18270
          protocol: TCP
          name: crabserver-mon
        volumeMounts:
        - name: proxy-secrets
          mountPath: /etc/proxy
          readOnly: true
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: proxy-secrets
        secret:
          secretName: proxy-secrets
      - name: secrets
        secret:
          secretName: crabserver-secrets
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
