kubernetes/cmsweb-nginx/dbs.yaml
kind: Service
apiVersion: v1
metadata:
  name: dbs
spec:
  selector:
    app: dbs
  ports:
    - port: 8250
      targetPort: 8250
      name: dbs
#       nodePort: 30250
    - port: 8252
      targetPort: 8252
      name: dbs-global-r
#       nodePort: 30252
    - port: 8253
      targetPort: 8253
      name: dbs-global-w
#       nodePort: 30253
    - port: 8254
      targetPort: 8254
      name: dbs-phys03-r
#       nodePort: 30254
    - port: 8255
      targetPort: 8255
      name: dbs-phys03-w
#       nodePort: 30255
#   type: NodePort
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: dbs
  name: dbs
spec:
  selector:
    matchLabels:
      app: dbs
  replicas: 1
  template:
    metadata:
      labels:
        app: dbs
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/dbs
        name: dbs
#         tty: true
#         stdin: true
#         lifecycle:
#           postStart:
#             exec:
#               command:
#               - bash
#               - -c
#               - sudo chmod 0400 /etc/secrets/server.key /etc/secrets/robotkey.pem
        ports:
        - containerPort: 8250
          protocol: TCP
          name: dbs
        - containerPort: 8252
          protocol: TCP
          name: dbs-global-r
        - containerPort: 8253
          protocol: TCP
          name: dbs-global-w
        - containerPort: 8254
          protocol: TCP
          name: dbs-phys03-r
        - containerPort: 8255
          protocol: TCP
          name: dbs-phys03-w
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 0400
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: dbs-secrets
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
