kubernetes/cmsweb-nginx/dbs2go.yaml
kind: Service
apiVersion: v1
metadata:
  name: dbs2go
spec:
  selector:
    app: dbs2go
  ports:
    - port: 8989
      targetPort: 8989
      nodePort: 30989
  type: NodePort
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: dbs2go
  name: dbs2go
spec:
  selector:
    matchLabels:
      app: dbs2go
  replicas: 1
  template:
    metadata:
      labels:
        app: dbs2go
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/dbs2go
        name: dbs2go
#         tty: true
#         stdin: true
#         lifecycle:
#           postStart:
#             exec:
#               command:
#               - bash
#               - -c
#               - sudo chmod 0400 /etc/secrets/server.key /etc/secrets/robotkey.pem
        ports:
        - containerPort: 8989
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: dbs2go-secrets
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
