kubernetes/cmsweb-nginx/httpsgo.yaml
kind: Service
apiVersion: v1
metadata:
  name: httpsgo
spec:
  type: ClusterIP
  ports:
  - port: 443
    protocol: TCP
    name: http
  selector:
    app: httpsgo
#   selector:
#     app: httpsgo
#   ports:
#     - port: 443
#       nodePort: 30843
#   type: NodePort
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: httpsgo
  name: httpsgo
spec:
  selector:
    matchLabels:
      app: httpsgo
  replicas: 1
  template:
    metadata:
      labels:
        app: httpsgo
    spec:
      containers:
      - image: veknet/httpsgo
        name: httpsgo
        ports:
        - containerPort: 443
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: "/etc/secrets"
          readOnly: true
        - name: etc-grid-security
          mountPath: /etc/grid-security
      volumes:
      - name: secrets
        secret:
          secretName: httpsgo-secrets
          defaultMode: 256
          # https://github.com/kubernetes/kubernetes/issues/34982
      - name: etc-grid-security
        hostPath:
            path: /etc/grid-security
