kubernetes/cmsweb-nginx/reqmgr2.yaml
kind: Service
apiVersion: v1
metadata:
  name: reqmgr2
spec:
  selector:
    app: reqmgr2
  ports:
    - port: 8246
      targetPort: 8246
      name: reqmgr2
    - port: 18246
      targetPort: 18246
      name: reqmgr2-mon
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: reqmgr2
  name: reqmgr2
spec:
  selector:
    matchLabels:
      app: reqmgr2
  replicas: 1
  template:
    metadata:
      labels:
        app: reqmgr2
    spec:
      # use hostNetwork to allow communication between reqmgr2/reqmon/workqueue and couch
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/reqmgr2
        name: reqmgr2
        tty: true
        stdin: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 20 && /data/monitor.sh"]
        ports:
        - containerPort: 8246
          protocol: TCP
          name: reqmgr2
        - containerPort: 18246
          protocol: TCP
          name: reqmgr2-mon
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
#       initContainers:
#       - name: checkcouchdb
#         image: busybox
#         command: ['sh', '-c', 'until nslookup couchdb.default; do echo "Waiting for couchdb"; sleep 10; done;']
      volumes:
      - name: secrets
        secret:
          secretName: reqmgr2-secrets
          # https://github.com/kubernetes/kubernetes/issues/34982
          defaultMode: 256
          items:
            - key: "hmac"
              path: "hmac"
              mode: 0640
            - key: "robotcert.pem"
              path: "robotcert.pem"
              mode: 0640
            - key: "robotkey.pem"
              path: "robotkey.pem"
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
