kubernetes/cmsweb-nginx/reqmon.yaml
kind: Service
apiVersion: v1
metadata:
  name: reqmon
spec:
  selector:
    app: reqmon
  ports:
    - port: 8249
      targetPort: 8249
      name: reqmon
    - port: 18249
      targetPort: 18249
      name: reqmon-mon
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: reqmon
  name: reqmon
spec:
  selector:
    matchLabels:
      app: reqmon
  replicas: 1
  template:
    metadata:
      labels:
        app: reqmon
    spec:
      # use hostNetwork to allow communication between reqmgr/reqmon/workqueue and couch
#       hostNetwork: true
#       dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/reqmon
        name: reqmon
        tty: true
        stdin: true
        lifecycle:
          postStart:
            exec:
              command: ["/bin/sh", "-c", "sleep 20 && /data/monitor.sh"]
        ports:
        - containerPort: 8249
          protocol: TCP
          name: reqmon
        - containerPort: 18249
          protocol: TCP
          name: reqmon-mon
        volumeMounts:
        - name: proxy-secrets
          mountPath: /etc/proxy
          readOnly: true
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: proxy-secrets
        secret:
          secretName: proxy-secrets
      - name: secrets
        secret:
          secretName: reqmon-secrets
          # https://github.com/kubernetes/kubernetes/issues/34982
          defaultMode: 256
          items:
            - key: "robotcert.pem"
              path: "robotcert.pem"
              mode: 0640
            - key: "robotkey.pem"
              path: "robotkey.pem"
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
