kubernetes/cmsweb-nginx/t0wmadatasvc.yaml
kind: Service
apiVersion: v1
metadata:
  name: t0wmadatasvc
spec:
  selector:
    app: t0wmadatasvc
  ports:
    - port: 8308
      targetPort: 8308
      name: t0wmadatasvc
    - port: 18308
      targetPort: 18308
      name: t0wmadsvc-mon
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: t0wmadatasvc
  name: t0wmadatasvc
spec:
  selector:
    matchLabels:
      app: t0wmadatasvc
  replicas: 1
  template:
    metadata:
      labels:
        app: t0wmadatasvc
    spec:
      # use hostNetwork to allow communication between reqmgr/t0wmadatasvc/workqueue and couch
#       hostNetwork: true
#       dnsPolicy: ClusterFirstWithHostNet
      containers:
      - image: cmssw/t0wmadatasvc:1.0.0
        name: t0wmadatasvc
        ports:
        - containerPort: 8308
          protocol: TCP
          name: t0wmadatasvc
        - containerPort: 18308
          protocol: TCP
          name: t0wmadsvc-mon
        volumeMounts:
        - name: proxy-secrets
          mountPath: /etc/proxy
          readOnly: true
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: proxy-secrets
        secret:
          secretName: proxy-secrets
      - name: secrets
        secret:
          secretName: t0wmadatasvc-secrets
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
