kubernetes/cmsweb-nginx/tfaas.yaml
kind: Service
apiVersion: v1
metadata:
  name: tfaas
spec:
  selector:
    app: tfaas
  ports:
    - port: 8083
      targetPort: 8083
---
kind: Deployment
apiVersion: extensions/v1beta1
metadata:
  labels:
    app: tfaas
  name: tfaas
spec:
  selector:
    matchLabels:
      app: tfaas
  replicas: 1
  template:
    metadata:
      labels:
        app: tfaas
    spec:
#       hostNetwork: true
      containers:
      - image: veknet/tfaas
        name: tfaas
#         tty: true
#         stdin: true
#         lifecycle:
#           postStart:
#             exec:
#               command:
#               - bash
#               - -c
#               - sudo chmod 0400 /etc/secrets/server.key /etc/secrets/robotkey.pem
        ports:
        - containerPort: 8083
          protocol: TCP
        volumeMounts:
        - name: secrets
          mountPath: /etc/secrets
          defaultMode: 256
        - name: hostkey
          mountPath: /etc/grid-security/hostkey.pem
          readOnly: true 
        - name: hostcert
          mountPath: /etc/grid-security/hostcert.pem
          readOnly: true 
      volumes:
      - name: secrets
        secret:
          secretName: tfaas-secrets
          defaultMode: 256
          # https://github.com/kubernetes/kubernetes/issues/34982
      - name: hostkey
        hostPath:
            path: /etc/grid-security/hostkey.pem
            type: File
      - name: hostcert
        hostPath:
            path: /etc/grid-security/hostcert.pem
            type: File
