kubernetes/cmsweb-nginx/ing-srv.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    # restrict access to this ingress controller from specific IPs
    # https://kubernetes.github.io/ingress-nginx/user-guide/nginx-configuration/annotations/#whitelist-source-range
    nginx.ingress.kubernetes.io/whitelist-source-range: 188.185.83.251
spec:
  rules:
  - host: cmsweb-srv.web.cern.ch
    http:
      paths:
      - path: /httpgo
        backend:
          serviceName: httpgo
          servicePort: 8888
      - path: /httpsgo
        backend:
          serviceName: httpsgo
          servicePort: 443
      - path: /confdb
        backend:
          serviceName: confdb
          servicePort: 8340
      - path: /crabserver
        backend:
          serviceName: crabserver
          servicePort: 8270
      - path: /crabcache
        backend:
          serviceName: crabcache
          servicePort: 8271
      - path: /phedex/datasvc
        backend:
          serviceName: phedex
          servicePort: 7001
      - path: /phedex
        backend:
          serviceName: phedex
          servicePort: 7101
      - path: /dqm/dev
        backend:
          serviceName: dqmgui
          servicePort: 8060
      - path: /dqm/relval
        backend:
          serviceName: dqmgui
          servicePort: 8081
      - path: /dqm/relval-test
        backend:
          serviceName: dqmgui
          servicePort: 8081
      - path: /dqm/offline
        backend:
          serviceName: dqmgui
          servicePort: 8080
      - path: /dqm/offline-test
        backend:
          serviceName: dqmgui
          servicePort: 8080
      - path: /reqmgr2
        backend:
          serviceName: reqmgr2
          servicePort: 8246
      - path: /das
        backend:
          serviceName: das
          servicePort: 8217
      - path: /dbs/int/global/DBSMigrate
        backend:
          serviceName: dbs-migrate
          servicePort: 8251
      - path: /dbs/int/global/DBSReader
        backend:
          serviceName: dbs-global-r
          servicePort: 8252
      - path: /dbs/int/global/DBSWriter
        backend:
          serviceName: dbs-global-w
          servicePort: 8253
      - path: /dbs/int/phys03/DBSWriter
        backend:
          serviceName: dbs-phys03-w
          servicePort: 8254
      - path: /dbs/int/phys03/DBSWriter
        backend:
          serviceName: dbs-phys03-w
          servicePort: 8255
      - path: /t0_reqmon
        backend:
          serviceName: t0reqmon
          servicePort: 8243
      - path: /t0wmadatasvc
        backend:
          serviceName: t0wmadatasvc
          servicePort: 8308
      - path: /wmstatsserver
        backend:
          serviceName: reqmon
          servicePort: 8249
# VK: we do not need to add /workqueue path since workqueue is couch based app
# such path creates mis-direction to couchdb workqueue path
#       - path: /workqueue
#         backend:
#           serviceName: workqueue
#           servicePort: 8240
      - path: /
        backend:
          serviceName: couchdb
          servicePort: 5984
